# SNPvalidation

./: README.md  pyproject.toml
data/: longevity_amanda.csv  longevity_luisa.csv  midway-survival-count.csv  midway-survival-model-table.csv
notebooks/: longevity-notebook-pallares-et-al.ipynb  longevity-notebook.ipynb
