[tool.poetry]
name = "midway-code"
version = "0.1.0"
description = ""
authors = ["Wolfffff <22243650+Wolfffff@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.1"
jupyter = "^1.0.0"
seaborn = "^0.12.1"
statsmodels = "^0.13.5"
palettable = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
